// PawPal+ — Mermaid diagram string export
// Use this in a web page that loads mermaid, or import the string for tooling.
const diagram = `
classDiagram
    class Owner {
        +string name
        +int daily_available_minutes
        +dict preferences
        +update_availability(minutes:int)
        +add_preference(key:str, value)
        +get_preferences(): dict
    }

    class Pet {
        +string name
        +string species
        +int age
        +List~Task~ tasks
        +add_task(t:Task)
        +remove_task(task_name:str)
        +get_tasks(): List~Task~
        +get_tasks_by_category(category:str): List~Task~
    }

    class Task {
        +string name
        +int duration  // minutes
        +int priority
        +string category
        +bool completed
        +bool must_do
        +string preferred_time
        +mark_complete()
        +update_priority(new_priority:int)
        +update_duration(new_duration:int)
        +is_mandatory(): bool
    }

    class Scheduler {
        +Owner owner
        +Pet|List~Pet~ pet
        +Schedule schedule
        +int total_scheduled_time
        +generate_schedule(): Schedule
        +clear_schedule()
        +get_schedule(): Schedule
        +sort_tasks_by_priority(): List~Task~
        +filter_feasible_tasks(): List~Task~
        +apply_preferences()
        +enforce_mandatory_tasks()
        +explain_schedule(): dict
        +get_unscheduled_tasks(): List~Task~
        +get_total_time_used(): int
    }

    class Schedule {
        +List~Task~ tasks
        +int total_time
        +int remaining_time
        +add_task(t:Task)
        +remove_task(task_name:str)
        +calculate_total_time(): int
        +summarize(): string
    }

    %% Associations
    Owner "1" o-- "0..*" Pet : owns
    Pet "1" o-- "0..*" Task : has
    Scheduler "1" --> "1" Owner
    Scheduler "1" --> "1" Pet
    Scheduler "1" o-- "1" Schedule
    Schedule "1" *-- "0..*" Task
`;

export default diagram;
